starter-code/shared/x86-64.h

// Page table entry type and page table type
typedef uint64_t x86_64_pageentry_t;
typedef struct __attribute__((aligned(PAGESIZE))) x86_64_pagetable {
    x86_64_pageentry_t entry[NPAGETABLEENTRIES];
} x86_64_pagetable;
                                        //   (user mode) (rather than kernel)


// struct x86_64_registers
//     A complete set of x86-64 general-purpose registers, plus some
//     special-purpose registers. The order and contents are defined to make
//     it more convenient to use important x86-64 instructions.

typedef struct x86_64_registers {
    uint64_t reg_rax;
    uint64_t reg_rcx;
    uint64_t reg_rdx;
    uint64_t reg_rbx;
    uint64_t reg_rbp;
    uint64_t reg_rsi;
    uint64_t reg_rdi;
    uint64_t reg_r8;
    uint64_t reg_r9;
    uint64_t reg_r10;
    uint64_t reg_r11;
    uint64_t reg_r12;
    uint64_t reg_r13;
    uint64_t reg_r14;
    uint64_t reg_r15;
    uint64_t reg_fs;
    uint64_t reg_gs;

    uint64_t reg_intno;         // (3) Interrupt number and error
    uint64_t reg_err;           // code (optional; supplied by x86
                                // interrupt mechanism)

    uint64_t reg_rip;		// (4) Task status: instruction pointer,
    uint16_t reg_cs;		// code segment, flags, stack
    uint16_t reg_padding2[3];	// in the order required by `iret`
    uint64_t reg_rflags;
    uint64_t reg_rsp;
    uint16_t reg_ss;
    uint16_t reg_padding3[3];
} x86_64_registers;
// Hardware definitions: C structures and constants for initializing x86
// hardware, particularly gate descriptors (loaded into the interrupt
// descriptor table) and segment descriptors.

// Pseudo-descriptors used for LGDT, LLDT, and LIDT instructions
typedef struct __attribute__((packed, aligned(2))) x86_64_pseudodescriptor {
    uint16_t pseudod_limit;            // Limit
    uint64_t pseudod_base;             // Base address
} x86_64_pseudodescriptor;
// Task state structure defines kernel stack for interrupt handlers
typedef struct __attribute__((packed, aligned(4))) x86_64_taskstate {
    uint32_t ts_reserved0;    // 4 bytes
    uint64_t ts_rsp[3];       // 24 bytes
    uint64_t ts_ist[7];       // 56 bytes
    uint64_t ts_reserved1;    // 8 bytes
    uint16_t ts_reserved2;    // 2 bytes
    uint16_t ts_iomap_base;   // 2 bytes
} x86_64_taskstate;
// Gate descriptor structure defines interrupt handlers
typedef struct x86_64_gatedescriptor {
    uint64_t gd_low;
    uint64_t gd_high;
} x86_64_gatedescriptor;