starter-code/pervious/bindings/x86_64.rs

extern "C" {
    pub fn strcmp(
        a: *const ::std::os::raw::c_char,
        b: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn strchr(
        s: *const ::std::os::raw::c_char,
        c: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn snprintf(
        s: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_ulong,
        format: *const ::std::os::raw::c_char,
        ...
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn vsnprintf(
        s: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_ulong,
        format: *const ::std::os::raw::c_char,
        val: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rand() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn srand(seed: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn assert_fail(
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        msg: *const ::std::os::raw::c_char,
    ) -> !;
}
extern "C" {
    pub fn panic(format: *const ::std::os::raw::c_char, ...) -> !;
}
extern "C" {
    pub static mut console: [u16; 2000usize];
}
extern "C" {
    pub static mut cursorpos: ::std::os::raw::c_int;
}
extern "C" {
    pub fn console_clear();
}
extern "C" {
    pub fn console_printf(
        cpos: ::std::os::raw::c_int,
        color: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        ...
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn console_vprintf(
        cpos: ::std::os::raw::c_int,
        color: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        val: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct printer {
    pub putc: ::std::option::Option<
        unsafe extern "C" fn(
            p: *mut printer,
            c: ::std::os::raw::c_uchar,
            color: ::std::os::raw::c_int,
        ),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of printer"][::std::mem::size_of::<printer>() - 8usize];
    ["Alignment of printer"][::std::mem::align_of::<printer>() - 1usize];
    ["Offset of field: printer::putc"][::std::mem::offset_of!(printer, putc) - 0usize];
};
extern "C" {
    pub fn printer_vprintf(
        p: *mut printer,
        color: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        val: *mut __va_list_tag,
    );
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct vamapping {
    pub pn: ::std::os::raw::c_int,
    pub pa: usize,
    pub perm: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vamapping"][::std::mem::size_of::<vamapping>() - 16usize];
    ["Alignment of vamapping"][::std::mem::align_of::<vamapping>() - 1usize];
    ["Offset of field: vamapping::pn"][::std::mem::offset_of!(vamapping, pn) - 0usize];
    ["Offset of field: vamapping::pa"][::std::mem::offset_of!(vamapping, pa) - 4usize];
    ["Offset of field: vamapping::perm"][::std::mem::offset_of!(vamapping, perm) - 12usize];
};
pub type x86_64_pageentry_t = u64;
#[repr(C)]
#[repr(align(4096))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_pagetable {
    pub entry: [x86_64_pageentry_t; 512usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_pagetable"][::std::mem::size_of::<x86_64_pagetable>() - 4096usize];
    ["Alignment of x86_64_pagetable"][::std::mem::align_of::<x86_64_pagetable>() - 4096usize];
    ["Offset of field: x86_64_pagetable::entry"]
        [::std::mem::offset_of!(x86_64_pagetable, entry) - 0usize];
};
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_registers {
    pub reg_rax: u64,
    pub reg_rcx: u64,
    pub reg_rdx: u64,
    pub reg_rbx: u64,
    pub reg_rbp: u64,
    pub reg_rsi: u64,
    pub reg_rdi: u64,
    pub reg_r8: u64,
    pub reg_r9: u64,
    pub reg_r10: u64,
    pub reg_r11: u64,
    pub reg_r12: u64,
    pub reg_r13: u64,
    pub reg_r14: u64,
    pub reg_r15: u64,
    pub reg_fs: u64,
    pub reg_gs: u64,
    pub reg_intno: u64,
    pub reg_err: u64,
    pub reg_rip: u64,
    pub reg_cs: u16,
    pub reg_padding2: [u16; 3usize],
    pub reg_rflags: u64,
    pub reg_rsp: u64,
    pub reg_ss: u16,
    pub reg_padding3: [u16; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_registers"][::std::mem::size_of::<x86_64_registers>() - 192usize];
    ["Alignment of x86_64_registers"][::std::mem::align_of::<x86_64_registers>() - 1usize];
    ["Offset of field: x86_64_registers::reg_rax"]
        [::std::mem::offset_of!(x86_64_registers, reg_rax) - 0usize];
    ["Offset of field: x86_64_registers::reg_rcx"]
        [::std::mem::offset_of!(x86_64_registers, reg_rcx) - 8usize];
    ["Offset of field: x86_64_registers::reg_rdx"]
        [::std::mem::offset_of!(x86_64_registers, reg_rdx) - 16usize];
    ["Offset of field: x86_64_registers::reg_rbx"]
        [::std::mem::offset_of!(x86_64_registers, reg_rbx) - 24usize];
    ["Offset of field: x86_64_registers::reg_rbp"]
        [::std::mem::offset_of!(x86_64_registers, reg_rbp) - 32usize];
    ["Offset of field: x86_64_registers::reg_rsi"]
        [::std::mem::offset_of!(x86_64_registers, reg_rsi) - 40usize];
    ["Offset of field: x86_64_registers::reg_rdi"]
        [::std::mem::offset_of!(x86_64_registers, reg_rdi) - 48usize];
    ["Offset of field: x86_64_registers::reg_r8"]
        [::std::mem::offset_of!(x86_64_registers, reg_r8) - 56usize];
    ["Offset of field: x86_64_registers::reg_r9"]
        [::std::mem::offset_of!(x86_64_registers, reg_r9) - 64usize];
    ["Offset of field: x86_64_registers::reg_r10"]
        [::std::mem::offset_of!(x86_64_registers, reg_r10) - 72usize];
    ["Offset of field: x86_64_registers::reg_r11"]
        [::std::mem::offset_of!(x86_64_registers, reg_r11) - 80usize];
    ["Offset of field: x86_64_registers::reg_r12"]
        [::std::mem::offset_of!(x86_64_registers, reg_r12) - 88usize];
    ["Offset of field: x86_64_registers::reg_r13"]
        [::std::mem::offset_of!(x86_64_registers, reg_r13) - 96usize];
    ["Offset of field: x86_64_registers::reg_r14"]
        [::std::mem::offset_of!(x86_64_registers, reg_r14) - 104usize];
    ["Offset of field: x86_64_registers::reg_r15"]
        [::std::mem::offset_of!(x86_64_registers, reg_r15) - 112usize];
    ["Offset of field: x86_64_registers::reg_fs"]
        [::std::mem::offset_of!(x86_64_registers, reg_fs) - 120usize];
    ["Offset of field: x86_64_registers::reg_gs"]
        [::std::mem::offset_of!(x86_64_registers, reg_gs) - 128usize];
    ["Offset of field: x86_64_registers::reg_intno"]
        [::std::mem::offset_of!(x86_64_registers, reg_intno) - 136usize];
    ["Offset of field: x86_64_registers::reg_err"]
        [::std::mem::offset_of!(x86_64_registers, reg_err) - 144usize];
    ["Offset of field: x86_64_registers::reg_rip"]
        [::std::mem::offset_of!(x86_64_registers, reg_rip) - 152usize];
    ["Offset of field: x86_64_registers::reg_cs"]
        [::std::mem::offset_of!(x86_64_registers, reg_cs) - 160usize];
    ["Offset of field: x86_64_registers::reg_padding2"]
        [::std::mem::offset_of!(x86_64_registers, reg_padding2) - 162usize];
    ["Offset of field: x86_64_registers::reg_rflags"]
        [::std::mem::offset_of!(x86_64_registers, reg_rflags) - 168usize];
    ["Offset of field: x86_64_registers::reg_rsp"]
        [::std::mem::offset_of!(x86_64_registers, reg_rsp) - 176usize];
    ["Offset of field: x86_64_registers::reg_ss"]
        [::std::mem::offset_of!(x86_64_registers, reg_ss) - 184usize];
    ["Offset of field: x86_64_registers::reg_padding3"]
        [::std::mem::offset_of!(x86_64_registers, reg_padding3) - 186usize];
};
#[repr(C, packed(2))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_pseudodescriptor {
    pub pseudod_limit: u16,
    pub pseudod_base: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_pseudodescriptor"][::std::mem::size_of::<x86_64_pseudodescriptor>() - 10usize];
    ["Alignment of x86_64_pseudodescriptor"]
        [::std::mem::align_of::<x86_64_pseudodescriptor>() - 2usize];
    ["Offset of field: x86_64_pseudodescriptor::pseudod_limit"]
        [::std::mem::offset_of!(x86_64_pseudodescriptor, pseudod_limit) - 0usize];
    ["Offset of field: x86_64_pseudodescriptor::pseudod_base"]
        [::std::mem::offset_of!(x86_64_pseudodescriptor, pseudod_base) - 2usize];
};
#[repr(C, packed(4))]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_taskstate {
    pub ts_reserved0: u32,
    pub ts_rsp: [u64; 3usize],
    pub ts_ist: [u64; 7usize],
    pub ts_reserved1: u64,
    pub ts_reserved2: u16,
    pub ts_iomap_base: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_taskstate"][::std::mem::size_of::<x86_64_taskstate>() - 96usize];
    ["Alignment of x86_64_taskstate"][::std::mem::align_of::<x86_64_taskstate>() - 4usize];
    ["Offset of field: x86_64_taskstate::ts_reserved0"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_reserved0) - 0usize];
    ["Offset of field: x86_64_taskstate::ts_rsp"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_rsp) - 4usize];
    ["Offset of field: x86_64_taskstate::ts_ist"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_ist) - 28usize];
    ["Offset of field: x86_64_taskstate::ts_reserved1"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_reserved1) - 84usize];
    ["Offset of field: x86_64_taskstate::ts_reserved2"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_reserved2) - 92usize];
    ["Offset of field: x86_64_taskstate::ts_iomap_base"]
        [::std::mem::offset_of!(x86_64_taskstate, ts_iomap_base) - 94usize];
};
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct x86_64_gatedescriptor {
    pub gd_low: u64,
    pub gd_high: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of x86_64_gatedescriptor"][::std::mem::size_of::<x86_64_gatedescriptor>() - 16usize];
    ["Alignment of x86_64_gatedescriptor"]
        [::std::mem::align_of::<x86_64_gatedescriptor>() - 1usize];
    ["Offset of field: x86_64_gatedescriptor::gd_low"]
        [::std::mem::offset_of!(x86_64_gatedescriptor, gd_low) - 0usize];
    ["Offset of field: x86_64_gatedescriptor::gd_high"]
        [::std::mem::offset_of!(x86_64_gatedescriptor, gd_high) - 8usize];
};
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __va_list_tag"][::std::mem::size_of::<__va_list_tag>() - 24usize];
    ["Alignment of __va_list_tag"][::std::mem::align_of::<__va_list_tag>() - 1usize];
    ["Offset of field: __va_list_tag::gp_offset"]
        [::std::mem::offset_of!(__va_list_tag, gp_offset) - 0usize];
    ["Offset of field: __va_list_tag::fp_offset"]
        [::std::mem::offset_of!(__va_list_tag, fp_offset) - 4usize];
    ["Offset of field: __va_list_tag::overflow_arg_area"]
        [::std::mem::offset_of!(__va_list_tag, overflow_arg_area) - 8usize];
    ["Offset of field: __va_list_tag::reg_save_area"]
        [::std::mem::offset_of!(__va_list_tag, reg_save_area) - 16usize];
};
